Fix responsive wide content causing overlap

--- a/src/styles/components/Documentation.scss
+++ b/src/styles/components/Documentation.scss
@@ -166,6 +166,10 @@
     outline: 1px solid #e7e7e7;
     border-radius: 3px;
     display: inline-block;
+    text-wrap: wrap;
+    max-width: 100vw;
+    inline-size: -moz-fit-content;
+    inline-size: fit-content;
   }
 
   .codeBlock {
@@ -210,6 +214,10 @@
   border-radius:15px;
   box-shadow:3px 4px 13px #7f7f7f;
   margin:10px 0;
+}
+
+.documentation-content-child {
+  overflow:hidden;
 }
 
 @media (max-width: 1024px) {
